--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
-
 {
   "name": "bookshelf",
   "version": "1.0.0",
   "description": "",
   "main": "src/scripts/index.js",
   "scripts": {
-    "dev": "concurrently \"tsc --watch\" \"live-server\" \"sass --watch src/styles/scss/index.scss src/styles/css/index.css\""
+    "start": "live-server",
+    "build-ts": "concurrently \"npx rimraf src/scripts/js \" \"tsc\"",
+    "build-scss": "sass src/styles/scss/index.scss src/styles/css/index.css",
+    "dev": "concurrently \"npx rimraf src/scripts/js \" \"tsc --watch\" \"live-server\" \"sass --watch src/styles/scss/index.scss src/styles/css/index.css\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^7.2.1",
     "live-server": "^1.2.2",
+    "rimraf": "^3.0.2",
     "sass": "^1.52.2",
     "typescript": "^4.7.2"
   }
